# justasimpleccal

./: CMakeLists.txt  a  main.c
